# TFL

./: .gitignore
lab1/: README.md  main.py  requirements.txt  run.sh  solver.py
lab1_new/: CMakeLists.txt  input.txt  lab1_new.cpp  run.bat  smt.smt2
lab2/: L_base.py  L_block.py  README.md  auto.txt  automaton.txt  mat.py  parameters.txt  relict_mat.py
lab2_new/: CMakeLists.txt  input.txt  lab2_new.cpp  out.txt
lab3/: .gitignore  README.md  cfg_to_pda.py  parser_mode.py
lab3/core/: parser_grammar.py  pda.py  position.py
lab3/data/: grammar.txt  pda  pda.json  pos_dfa
